# efmarketplace

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  launch.py  pyproject.toml
deploy/: docker-compose.dev.yaml  docker-compose.yaml
deploy/docker/api/: Dockerfile
deploy/docker/redis/: Dockerfile
docker/efmarketplace/: Dockerfile
docker/postgresql/: Dockerfile
efmarketplace/: __init__.py  __main__.py  conftest.py  logging.py  logging_.py  settings.py
efmarketplace/db/: config.py
efmarketplace/db/dao/: __init__.py  base.py  category.py  city.py  country.py  favorites.py  notification.py  subcategory.py  ticket.py  user.py
efmarketplace/db/migrations/models/: 0_20230216123924_init.py  0_20230228114756_init.py
efmarketplace/db/models/: __init__.py  category.py  city.py  country.py  favorites.py  notification.py  notification_status.py  subcategory.py  ticket.py  ticket_models.py  user.py
efmarketplace/pkg/: price.py
efmarketplace/pkg/fake/: __init__.py  gen.py
efmarketplace/pkg/types/: __init__.py  integeres.py  strings.py
efmarketplace/schemas/: __init__.py  auth.py  base.py  category.py  city.py  country.py  favorites.py  general.py  notification.py  otp.py  price.py  subcategory.py  ticket.py  user.py
efmarketplace/services/: __init__.py  auth.py  authorization.py  category.py  city.py  country.py  notification.py  price.py  subcategory.py  user.py
efmarketplace/services/cache/: lifetime.py
efmarketplace/services/redis/: lifetime.py
efmarketplace/services/repeat/: __init__.py
efmarketplace/tests/: __init__.py  conftest.py  test_auth.py  test_dummy.py  test_price.py  test_redis.py  test_user.py
efmarketplace/web/: __init__.py  application.py  handle_http_exceptions.py  lifetime.py
efmarketplace/web/api/: __init__.py  router.py
efmarketplace/web/api/admin_/: __init__.py
efmarketplace/web/api/admin_notification/: __init__.py  views.py
efmarketplace/web/api/auth/: __init__.py  views.py
efmarketplace/web/api/categories/: __init__.py  (+1 more)
(+35 files in other folders)
